[metadata]
name = "ml-nexus"
version = 0.1.0
author = Shilpa Musale
author_email = ishishiv3012@gmail.com
description = A comprehensive machine learning repository showcasing algorithms from scratch and deployment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ishi3012/ml-nexus
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy==1.23.5
    pandas==2.0.3
    scikit-learn==1.3.0
    matplotlib==3.7.1
    seaborn==0.12.0
    pytest==7.3.1
    flask==2.3.2
    fastapi==0.99.0
    uvicorn==0.23.0
    docker==6.0.1
    requests==2.31.0

[options.packages.find]
exclude =
    tests
    notebooks

[flake8]
max-line-length = 88
exclude = 
    .git,
    __pycache__,
    build,
    dist

[tool:pytest]
testpaths = tests
